--- a/working/BBH_formation.ipynb
+++ b/working/BBH_formation.ipynb
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "#plot the contribution of each gauddian distribution\n",
+    "#plot the contribution of each gaussian distribution\n",
     "\n",
     "contr=best_model.predict_proba(x.reshape(-1, 1))\n",
     "pdf=np.exp(best_model.score_samples(x[:, np.newaxis]))\n",
@@ -197,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
