--- a/working/L12_transient_universe_2.ipynb
+++ b/working/L12_transient_universe_2.ipynb
@@ -195,7 +195,8 @@
     }
    ],
    "source": [
-    "fig = corner.corner(samples_eq_burst, labels=labels_burst, levels=[0.68,0.95], quantiles=[0.16, 0.84], show_titles=True)"
+    "fig = corner.corner(samples_eq_burst, labels=labels_burst, levels=[0.68,0.95], quantiles=[0.16, 0.84], \n",
+    "                    show_titles=True)"
    ]
   },
   {
