edit three doors

--- a/working/L01_three_doors.ipynb
+++ b/working/L01_three_doors.ipynb
@@ -1,8 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8e6c7637",
+   "metadata": {},
+   "source": [
+    "## Time to get you hands dirty!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28f7b488",
+   "metadata": {},
+   "source": [
+    "### Simulate the Monty Hall Problem\n",
+    "\n",
+    "- Simulate three doors, one car, and two goats.\n",
+    " - Simulate three players: the switcher, the conservative, and the newcomer. \n",
+    " - Record who wins.\n",
+    " - Repeat it many times.\n",
+    " - Which player do you want to be?\n",
+    " \n",
+    " - What would happen if you had 100 doors to choose from and the presenter opens 98 or them?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "eefd4dd0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "4966093e",
    "metadata": {},
    "outputs": [
@@ -21,9 +45,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "keeper wins: 1.1 %\n",
-      "switcher wins: 98.9 %\n",
-      "newcomer wins: 48.9 %\n"
+      "keeper wins: 1.0 %\n",
+      "switcher wins: 99.0 %\n",
+      "newcomer wins: 52.9 %\n"
      ]
     }
    ],
@@ -88,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
