Edit irreducible mass

--- a/working/L07_irreducible_mass.ipynb
+++ b/working/L07_irreducible_mass.ipynb
@@ -341,7 +341,9 @@
     "### Exact solution\n",
     "\n",
     "Consider the pdf of $M_{irr}$:\n",
-    "$$p(M_{\\rm irr})  = \\frac{\\sqrt{2/\\pi}}{\\sigma} \\int_{1/\\sqrt{2}}^1 \\exp\\left[{-\\frac{(M_{\\rm irr}/f -\\mu)^2}{2\\sigma^2}}\\right]  \\frac{2 f^2-1}{f \\sqrt{1 - f^2}}  \\,\\, {\\rm d}f\\,. \\label{pmirr}$$\n",
+    "\\begin{equation}\n",
+    "p(M_{\\rm irr})  = \\frac{\\sqrt{2/\\pi}}{\\sigma} \\int_{1/\\sqrt{2}}^1 \\exp\\left[{-\\frac{(M_{\\rm irr}/f -\\mu)^2}{2\\sigma^2}}\\right]  \\frac{2 f^2-1}{f \\sqrt{1 - f^2}}  \\,\\, {\\rm d}f\\,. \\label{pmirr}\n",
+    "\\end{equation}\n",
     "\n",
     "and compare it with the KDE result."
    ]
