--- a/working/L20_detectability.ipynb
+++ b/working/L20_detectability.ipynb
@@ -304,7 +304,7 @@
    "id": "7a615326",
    "metadata": {},
    "source": [
-    "##### Random Forest"
+    "*Random Forest*"
    ]
   },
   {
@@ -509,7 +509,7 @@
    "id": "f125912f",
    "metadata": {},
    "source": [
-    "##### Gradient Boosting"
+    "*Gradient Boosting*"
    ]
   },
   {
@@ -664,7 +664,7 @@
    "source": [
     "### Dimensionality reduction\n",
     "\n",
-    "Try to reduce the dimensionality of the data, this in principle could help the classification problem. Consider the three classifier we used before and, for each of them, apply a PCA algorithm."
+    "Try to reduce the dimensionality of the data, this in principle could help the classification problem. Consider the two classifier we used before and, for each of them, apply a PCA algorithm."
    ]
   },
   {
@@ -773,7 +773,7 @@
    "id": "c555b162",
    "metadata": {},
    "source": [
-    "##### Gradient Boosting with PCA"
+    "*Gradient Boosting with PCA*"
    ]
   },
   {
