--- a/working/L20_detectability.ipynb
+++ b/working/L20_detectability.ipynb
@@ -672,7 +672,7 @@
    "id": "b1fcf16d",
    "metadata": {},
    "source": [
-    "##### Random forest with PCA"
+    "*Random forest with PCA*"
    ]
   },
   {
