--- a/working/L20_detectability.ipynb
+++ b/working/L20_detectability.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "14c26cf1",
    "metadata": {},
    "outputs": [],
@@ -58,6 +58,7 @@
     "from astroML.classification import GMMBayes\n",
     "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
     "\n",
     "from sklearn import preprocessing\n",
     "\n",
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a31908c1",
    "metadata": {},
    "outputs": [],
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b3944803",
    "metadata": {},
    "outputs": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d9bea357",
    "metadata": {},
    "outputs": [],
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "1bd1bc46",
    "metadata": {},
    "outputs": [
@@ -149,14 +150,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(20000000, 11)\n"
+      "(20000000, 11)\n",
+      "[0.82250949 1.09323729 1.30539835 ... 9.9752885  0.92040623 2.35090701] [0 0 0 ... 0 0 0]\n"
      ]
     }
    ],
    "source": [
     "X = np.array([mtot,q,z,iota,psi,chi1x,chi1y,chi1z,chi2x,chi2y,chi2z]).T\n",
     "\n",
-    "print(X.shape)"
+    "print(X.shape)\n",
+    "print(snr, det)"
    ]
   },
   {
@@ -260,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "9074e2a5",
    "metadata": {},
    "outputs": [],
@@ -1237,6 +1240,154 @@
     "In general all the classifications provide results which are quite similar to each other. The problem with *Random Forest* is the overfitting, which is present also if we increase the maximum depth. *Gradient Boosting* instead provides great results. It's interesting the fact that, if we consider only the total mass, mass ratio, redshift and iota, we get only slightly worse results than in the case where we considered the entire dataset.\n",
     "\n",
     "At the end we obtained an accuracy of $\\simeq96.3\\%$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f3d413b",
+   "metadata": {},
+   "source": [
+    "### Regression on SNR\n",
+    "\n",
+    "Let's try instead of a classification on the detectability, a regression on the Signal to Noise ratio. Consider as a regressior `KNeighborsRegressor`, this beacuse we expect events with similar characteristics have similar values of the SNR."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1bfd5c57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20000000, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_regr= np.array([mtot,q,z,iota]).T\n",
+    "\n",
+    "print(X_regr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c4233b2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X_regr=scaler.fit_transform(X_regr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4d13bde2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a subset\n",
+    "X_regr_sub=X_regr[::1000]\n",
+    "snr_sub=snr[::1000]\n",
+    "det_sub=det[::1000]\n",
+    "\n",
+    "X_regr_train, X_regr_test, y_regr_train, y_regr_test, det_train, det_test = train_test_split(X_regr_sub,snr_sub, \n",
+    "                                                                                             det_sub,test_size=0.5,\n",
+    "                                                                                             random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "9369e2db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KN_regr=KNeighborsRegressor()\n",
+    "\n",
+    "KN_regr.fit(X_regr_train,y_regr_train)\n",
+    "\n",
+    "train_pred_regr = KN_regr.predict(X_regr_train)\n",
+    "test_pred_regr = KN_regr.predict(X_regr_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c94c1ec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 1 ... 0 0 0]\n",
+      "[ 0.81993354 39.85401001 44.42196854 ...  7.51174701  3.40510007\n",
+      "  3.32310293]\n",
+      "[0 0 0 ... 0 0 0]\n",
+      "[6.27080026 3.37106939 1.71029852 ... 1.70399945 3.48199017 0.97089236]\n"
+     ]
+    }
+   ],
+   "source": [
+    "det_regr_train=np.array(train_pred_regr>12, dtype=int)\n",
+    "\n",
+    "print(det_regr_train)\n",
+    "print(train_pred_regr)\n",
+    "\n",
+    "det_regr_test=np.array(test_pred_regr>12, dtype=int)\n",
+    "\n",
+    "print(det_regr_test)\n",
+    "print(test_pred_regr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "b9c29a97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "completeness train: 0.902\n",
+      "contamination train: 0.16\n",
+      "\n",
+      "completeness test: 0.887\n",
+      "contamination test: 0.19\n",
+      "\n",
+      "accuracy: 0.952\n"
+     ]
+    }
+   ],
+   "source": [
+    "completeness_train, contamination_train = completeness_contamination(det_regr_train, det_train)\n",
+    "\n",
+    "completeness_test, contamination_test = completeness_contamination(det_regr_test, det_test)\n",
+    "\n",
+    "print(\"\\ncompleteness train:\", round(float(completeness_train),3))\n",
+    "print(\"contamination train:\", round(float(contamination_train),3))\n",
+    "\n",
+    "print(\"\\ncompleteness test:\", round(float(completeness_test),3))\n",
+    "print(\"contamination test:\", round(float(contamination_test),3))\n",
+    "\n",
+    "accuracy_1 = accuracy_score(det_test, det_regr_test)\n",
+    "\n",
+    "print(\"\\naccuracy:\", round(float(accuracy_1),3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8e9806e",
+   "metadata": {},
+   "source": [
+    "Well this is a very good result, if we consider that we applied it only to a small subset of the data (only $4$ features). We obtain the highest completeness, but on the other hand also the contamination increased. At the end the accuracy is comparable with the classification result."
    ]
   }
  ],
