--- a/working/L20_detectability.ipynb
+++ b/working/L20_detectability.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "14c26cf1",
    "metadata": {},
    "outputs": [],
@@ -54,6 +54,7 @@
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
     "from astroML.classification import GMMBayes\n",
     "\n",
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "1bd1bc46",
    "metadata": {},
    "outputs": [
@@ -1249,12 +1250,12 @@
    "source": [
     "### Regression on SNR\n",
     "\n",
-    "Let's try instead of a classification on the detectability, a regression on the Signal to Noise ratio. Consider as a regressior `KNeighborsRegressor`, this beacuse we expect events with similar characteristics have similar values of the SNR."
+    "Let's try instead of a classification on the detectability, a regression on the Signal to Noise ratio. Consider as a regressor `KNeighborsRegressor`, this beacuse we expect events with similar characteristics have similar values of the SNR."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "1bfd5c57",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "c4233b2b",
    "metadata": {},
    "outputs": [],
@@ -1285,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "4d13bde2",
    "metadata": {},
    "outputs": [],
@@ -1302,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "id": "9369e2db",
    "metadata": {},
    "outputs": [],
@@ -1316,8 +1317,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e33e69d8",
+   "metadata": {},
+   "source": [
+    "Let's now assign the label $0$ if the SNR<$12$, $1$ otherwise."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "id": "c94c1ec4",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "id": "b9c29a97",
    "metadata": {},
    "outputs": [
