Added regression with random forest in addition to KN

--- a/working/L20_detectability.ipynb
+++ b/working/L20_detectability.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "14c26cf1",
    "metadata": {},
    "outputs": [],
@@ -53,6 +53,7 @@
     "from tabulate import tabulate\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
@@ -1255,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "1bfd5c57",
    "metadata": {},
    "outputs": [
@@ -1275,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "c4233b2b",
    "metadata": {},
    "outputs": [],
@@ -1286,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "4d13bde2",
    "metadata": {},
    "outputs": [],
@@ -1303,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9369e2db",
    "metadata": {},
    "outputs": [],
@@ -1326,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c94c1ec4",
    "metadata": {},
    "outputs": [
@@ -1356,9 +1357,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "b9c29a97",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1396,7 +1399,65 @@
    "id": "a8e9806e",
    "metadata": {},
    "source": [
-    "Well this is a very good result, if we consider that we applied it only to a small subset of the data (only $4$ features). We obtain the highest completeness, but on the other hand also the contamination increased. At the end the accuracy is comparable with the classification result."
+    "Well this is a very good result, if we consider that we applied it only to a small subset of the data (only $4$ features). We obtain the highest completeness, but on the other hand also the contamination increased. At the end the accuracy is comparable with the classification result.\n",
+    "\n",
+    "Try with `RandomForestRegressor`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9d870151",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "completeness train: 0.963\n",
+      "contamination train: 0.063\n",
+      "\n",
+      "completeness test: 0.895\n",
+      "contamination test: 0.144\n",
+      "\n",
+      "accuracy: 0.962\n"
+     ]
+    }
+   ],
+   "source": [
+    "RF_regr=RandomForestRegressor()\n",
+    "\n",
+    "RF_regr.fit(X_regr_train,y_regr_train)\n",
+    "\n",
+    "train_pred_regr = RF_regr.predict(X_regr_train)\n",
+    "test_pred_regr = RF_regr.predict(X_regr_test)\n",
+    "\n",
+    "det_regr_train=np.array(train_pred_regr>12, dtype=int)\n",
+    "\n",
+    "det_regr_test=np.array(test_pred_regr>12, dtype=int)\n",
+    "\n",
+    "completeness_train, contamination_train = completeness_contamination(det_regr_train, det_train)\n",
+    "\n",
+    "completeness_test, contamination_test = completeness_contamination(det_regr_test, det_test)\n",
+    "\n",
+    "print(\"\\ncompleteness train:\", round(float(completeness_train),3))\n",
+    "print(\"contamination train:\", round(float(contamination_train),3))\n",
+    "\n",
+    "print(\"\\ncompleteness test:\", round(float(completeness_test),3))\n",
+    "print(\"contamination test:\", round(float(contamination_test),3))\n",
+    "\n",
+    "accuracy_1 = accuracy_score(det_test, det_regr_test)\n",
+    "\n",
+    "print(\"\\naccuracy:\", round(float(accuracy_1),3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f39f89f",
+   "metadata": {},
+   "source": [
+    "We got some interesting results, maybe it would be interesting to investigate this topic further."
    ]
   }
  ],
